--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
 
+        <!-- Bean Validation -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <!-- Driver H2 DATABASE -->
         <dependency>
             <groupId>com.h2database</groupId>
