--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,19 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!-- Swagger -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
         <!-- Driver H2 DATABASE -->
         <dependency>
             <groupId>com.h2database</groupId>
